Add null check for StorageAccess interface in storageAccessFromPath

In slotInterfacesRemoved we do a remove+add cycle

During that cycle the backend object is null, so querying the StorageAccess
interface will return null.

This means that when something calls storageAccessFromPath in reaction to
the removed signal we will get a null StorageAccess.

The overall design is a bit shaky here, but we can handle it more gracefully
by checking the result for null

BUG: 497299

CCBUG: 492578

SENTRY: PLASMA-WORKSPACE-11Q1

SENTRY: KDECONNECT-KDE-BK

SENTRY: DOLPHIN-320

SENTRY: KDED-7M

SENTRY: FALLTHROUGH-62S

SENTRY: KATE-Y3

SENTRY: KDENLIVE-VR

SENTRY: XDG-DESKTOP-PORTAL-KDE-3R

SENTRY: KDEVELOP-93

SENTRY: KRUNNER-GD

SENTRY: PLASMA-WORKSPACE-1986

SENTRY: ELISA-9H